--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="190dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_btn"
+        app:layout_constraintTop_toBottomOf="@+id/serverData_txt"
         app:srcCompat="@drawable/morsa_login_img" />
 
     <ImageView
@@ -86,5 +86,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_btn"
         app:srcCompat="@drawable/company_name" />
+
+    <TextView
+        android:id="@+id/serverData_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Cambiar datos de conexión"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_btn" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="v4.5_U"
+        app:layout_constraintEnd_toEndOf="@+id/logo_img"
+        app:layout_constraintTop_toBottomOf="@+id/logo_img" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
