--- a/app/src/main/res/layout/activity_count.xml
+++ b/app/src/main/res/layout/activity_count.xml
@@ -81,7 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:text="Finalizar"
+        android:text="Salir de Conteo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
