--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -113,7 +113,7 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="282dp"
+                android:layout_height="match_parent"
                 android:gravity="center">
 
                 <ImageButton
@@ -125,16 +125,42 @@
                     android:scaleType="fitCenter"
                     android:src="@drawable/routes" />
 
-                <ImageButton
+                <Button
+                    android:id="@+id/refunds_btn"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:background="#FFFFFF"
+                    android:padding="6dp"
+                    android:text="Devoluciones"
+                    android:scaleType="fitCenter" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <Button
                     android:id="@+id/settings_btn"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:background="#FFFFFF"
                     android:padding="6dp"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/routes" />
+                    android:text="Ajustes"/>
+
+                <Button
+                    android:id="@+id/mockup_btn"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:background="#FFFFFF"
+                    android:padding="6dp"
+                    android:scaleType="fitCenter"
+                    />
 
             </TableRow>
+
         </TableLayout>
     </ScrollView>
 
