--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -38,12 +38,13 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingHorizontal="2dp"
                 android:gravity="center">
 
                 <ImageButton
                     android:id="@+id/reception_btn"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:background="#FFFFFF"
                     android:paddingLeft="6dp"
                     android:paddingRight="6dp"
@@ -53,49 +54,44 @@
 
                 <ImageButton
                     android:id="@+id/revision_btn"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:background="#FFFFFF"
                     android:paddingLeft="6dp"
                     android:paddingRight="6dp"
                     android:paddingBottom="6dp"
                     android:scaleType="fitCenter"
                     android:src="@drawable/inspection" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center">
 
                 <ImageButton
                     android:id="@+id/transfer_btn"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:background="#FFFFFF"
                     android:padding="6dp"
                     android:scaleType="fitCenter"
                     android:src="@drawable/acomodo" />
-
-                <ImageButton
-                    android:id="@+id/re_stock_btn"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:background="#FFFFFF"
-                    android:padding="6dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/restock" />
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+               android:paddingHorizontal="2dp"
                 android:gravity="center">
 
                 <ImageButton
+                    android:id="@+id/re_stock_btn"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:background="#FFFFFF"
+                    android:padding="6dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/restock" />
+
+                <ImageButton
                     android:id="@+id/picking_btn"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:background="#FFFFFF"
                     android:padding="6dp"
                     android:scaleType="fitCenter"
@@ -103,8 +99,8 @@
 
                 <ImageButton
                     android:id="@+id/count_btn"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:background="#FFFFFF"
                     android:padding="6dp"
                     android:scaleType="fitCenter"
@@ -114,12 +110,13 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingHorizontal="2dp"
                 android:gravity="center">
 
                 <ImageButton
                     android:id="@+id/routes_btn"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:background="#FFFFFF"
                     android:padding="6dp"
                     android:scaleType="fitCenter"
@@ -127,38 +124,21 @@
 
                 <ImageButton
                     android:id="@+id/refunds_btn"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:background="#FFFFFF"
                     android:padding="6dp"
                     android:src="@drawable/refunds"
                     android:scaleType="fitCenter" />
 
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center">
-
                 <ImageButton
                     android:id="@+id/settings_btn"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:background="#FFFFFF"
                     android:padding="6dp"
                     android:scaleType="fitCenter"
                     android:src="@drawable/settings"/>
-
-                <Button
-                    android:id="@+id/mockup_btn"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:background="#FFFFFF"
-                    android:padding="6dp"
-                    android:scaleType="fitCenter"
-                    />
-
             </TableRow>
 
         </TableLayout>
