Test in Warehouse Removed Issue pop up Not saved inspection data on phone Make all processes save daton on ODoo

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -13,5 +13,13 @@
             app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
+    <PreferenceCategory android:title="Rango de Busqueda (Dias)">
+
+    </PreferenceCategory>
+    <EditTextPreference
+        app:key="inspection_days"
+        app:title="Inpección"
+        android:inputType="number"
+        app:useSimpleSummaryProvider="true" />
 
 </PreferenceScreen>
