--- a/app/src/main/res/layout/order_revision_item.xml
+++ b/app/src/main/res/layout/order_revision_item.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:id="@+id/object_txt"
-            android:layout_width="274dp"
+            android:layout_width="240dp"
             android:layout_height="match_parent"
             android:background="@drawable/invoice_lv_dbl"
             android:padding="4dp"
@@ -29,6 +29,13 @@
             android:text="Holder"
             android:textAlignment="center"
             android:textColor="#000000" />
+
+        <ImageView
+            android:id="@+id/set_count_btn"
+            android:src="@drawable/ic_write"
+            android:background="#2f3983"
+            android:padding="6dp"
+            />
 
     </TableRow>
 </TableLayout>
