--- a/app/src/main/res/layout/activity_order_revision.xml
+++ b/app/src/main/res/layout/activity_order_revision.xml
@@ -126,4 +126,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/order_revision_tb" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/report_extra_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        android:clickable="true"
+        app:backgroundTint="@android:color/holo_orange_dark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_extra" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
