--- a/app/src/main/res/layout/activity_invoice.xml
+++ b/app/src/main/res/layout/activity_invoice.xml
@@ -52,12 +52,12 @@
         android:id="@+id/product_lv"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:dividerHeight="0.0dp"
         android:layout_marginStart="4dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
         android:background="@drawable/invoice_lv_dbl"
-        app:layout_constraintBottom_toTopOf="@+id/total_lbl"
+        android:dividerHeight="0.0dp"
+        app:layout_constraintBottom_toTopOf="@+id/lines_lbl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tableLayout">
@@ -69,11 +69,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:text="@string/confirm_btn_str"
         android:backgroundTint="#2f3983"
-        android:textColor="#ffffff"
-        android:padding="20dp"
         android:fontFamily="@font/lato_regular"
+        android:padding="20dp"
+        android:text="@string/confirm_btn_str"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -83,26 +83,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
         android:fontFamily="@font/lato_bold"
         android:text="TOTAL:"
         android:textColor="#8e8e8e"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toStartOf="@+id/total_txt" />
+        app:layout_constraintEnd_toStartOf="@+id/total_txt"
+        app:layout_constraintTop_toTopOf="@+id/lines_lbl" />
 
     <TextView
         android:id="@+id/total_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="2dp"
-        android:layout_marginBottom="6dp"
         android:fontFamily="@font/lato_regular"
         android:text="$40"
         android:textColor="#8e8e8e"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/total_lbl" />
 
     <TextView
         android:id="@+id/supplier_lbl"
@@ -183,5 +181,44 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/lines_lbl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="LINEAS:"
+        app:layout_constraintBottom_toTopOf="@+id/pzs_lbl"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/pzs_lbl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="4dp"
+        android:text="PIEZAS:"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/lines_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="1dp"
+        android:text="100"
+        app:layout_constraintStart_toEndOf="@+id/lines_lbl"
+        app:layout_constraintTop_toTopOf="@+id/lines_lbl" />
+
+    <TextView
+        android:id="@+id/pzs_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:text="1000"
+        app:layout_constraintStart_toEndOf="@+id/pzs_lbl"
+        app:layout_constraintTop_toTopOf="@+id/pzs_lbl" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
