Arreglados errores en conteo ciclico Agregado escaneo con codigos de barra alternativos Colorear lineas de Inspeccion verde al llegar al conteo

--- a/app/src/main/res/layout/activity_count.xml
+++ b/app/src/main/res/layout/activity_count.xml
@@ -47,6 +47,15 @@
                 android:text="Codigo"
                 android:textColor="#FFFFFF" />
 
+            <TextView
+                android:id="@+id/pzqty_lbl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight=".20"
+                android:fontFamily="@font/lato_bold"
+                android:text="Ctd."
+                android:textColor="#FFFFFF" />
+
         </TableRow>
 
     </TableLayout>
