--- a/app/src/main/res/layout/count_item.xml
+++ b/app/src/main/res/layout/count_item.xml
@@ -6,7 +6,7 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
 
                 <TextView
                     android:id="@+id/location_txt"
-                    android:layout_width="100dp"
+                    android:layout_width="80dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/invoice_lv_dbl"
                     android:fontFamily="@font/lato_regular"
@@ -36,14 +36,38 @@
 
                 <TextView
                     android:id="@+id/code_txt"
-                    android:layout_width="260dp"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/invoice_lv_dbl"
+                    android:fontFamily="@font/lato_regular"
+                    android:padding="2dp"
+                    android:text="Lorem ipsum Lorem Ipsum Lorem Ipsum" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/pzqty_txt"
+                    android:layout_width="44dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/invoice_lv_dbl"
                     android:fontFamily="@font/lato_regular"
                     android:padding="4dp"
-                    android:text="Lorem ipsum Lorem Ipsum Lorem Ipsum" />
+                    android:text="0"
+                    android:textAlignment="center" />
             </TableRow>
 
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <ImageView
+                android:id="@+id/set_qty_btn"
+                android:background="#2f3983"
+                android:padding="6dp"
+                android:src="@drawable/ic_write" />
         </TableRow>
 
     </TableLayout>
