--- a/app/src/main/res/layout/activity_refund_details.xml
+++ b/app/src/main/res/layout/activity_refund_details.xml
@@ -96,7 +96,7 @@
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
         android:fontFamily="@font/lato_bold"
-        android:text="TOTAL:"
+        android:text="PIEZAS:"
         android:textColor="#8e8e8e"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/button"
@@ -109,7 +109,7 @@
         android:layout_marginEnd="2dp"
         android:layout_marginBottom="6dp"
         android:fontFamily="@font/lato_regular"
-        android:text="$40"
+        android:text="0"
         android:textColor="#8e8e8e"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/button"
