Arreglo en error en nombres de Picking Arreglo en mensaje de abierto y cerrado

--- a/app/src/main/res/layout/activity_count.xml
+++ b/app/src/main/res/layout/activity_count.xml
@@ -90,7 +90,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:text="Salir de Conteo"
+        android:textColor="#ffffff"
+        android:backgroundTint="#2f3983"
+        android:text="Guardar y Salir"
+        android:fontFamily="@font/lato_regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
